add entity, repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # MySQL
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/swp
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/swp
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=create-drop
 # PostgresSQL
 # spring.datasource.url=${Aqua_DB}
 # spring.datasource.username=${Aqua_DB_name}
