--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.jpa.hibernate.ddl-auto=create-drop
 # PostgresSQL
-# spring.datasource.url=${Aqua_DB}
-# spring.datasource.username=${Aqua_DB_name}
-# spring.datasource.password=${Aqua_DB_password}
-# spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=${Aqua_DB}
+spring.datasource.username=${Aqua_DB_name}
+spring.datasource.password=${Aqua_DB_password}
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
 
